fixes padding issues with support form, as well as text alignment

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -126,6 +126,8 @@ p, li {
 fieldset {
   border: 0;
   width: 100%;
+  padding: 20px;
+  text-align: center;
 }
 
 textarea {
@@ -845,7 +847,7 @@ transition: color .4s;
 #sub {
   background: #2980b9;
   width: 40%;
-  margin-left:28%;
+  margin-left:0;
   margin-top:10px;
   text-transform: uppercase;
   color: white;
